Use a mocked OciExtension using Proxy that will inject a mocked Monitoring interface.
Additional Note:
This fix also includes a resolution to https://github.com/helidon-io/helidon/issues/7739 that is caused by the Monitoring.postMetricData() to be called before the test metrics are registered.